2008-07-07    <jeff@mini.nerble.net>

	* objs/objs.cc: Fixed delta_wrap_check, so dragons attack better.

	* combat.cc (Combat): Fixed problem with invisible monsters not
	attacking.

2008-07-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	actors.*, actions.*: Put some deleted actor actions into queue to prevent
	bug #1980431.

2008-07-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* monsters.cc: Fixing incorrect initial monster stat generation.
	* schedule.cc: No longer refer to class variables after possible schedule
	  change. Also, remove possible double-deletion on scripted schedule.
	* gamewin.cc, gumps/Notebook_gump.h: Read in notebook when loading a saved
	  game (prevents data loss if notebook is not manually opened before saving
	  since last reload).
	* actors.*: Fixed cache-out crash in areas with dead bodies (bug #1998960).

2008-06-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/monstinf.cc: fixed undefined experience value

2008-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: removed some using std::'s to improve gcc 4.3 support

2008-06-14	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* fnames.h, mapedit/studio.cc, server/*: Consolidating name of socket file
	  in Exult/ES communication to be "<GAMEDAT>/exultserver" on all OSes.
	* server/servewin32.cc: FILE_SHARE_DELETE flag prevent CreateFile from
	  working in Win9x, preventing ES from working there.
	* actors.cc: Making NPCs quit combat/attacking a target after dying.

2008-06-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing handling of dead bodies, including flags.

2008-06-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixing segfaults on exit.
	* actors.cc: Fixed checks that were failing due to operator precedence.
	* effects.cc: Fixed crash on using Death Vortex/Energy Mist. Fixed Death
	  Vortex and Energy Mist.
	* monsters.cc: Fixed carpet-filled monster inventory bug.